log
Fri Mar 20 05:57:58 PM UTC 2026: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:29: error: ‘i’ undeclared (first use in this function)
   46 |    for (int k = 1; k <= 10; i++)
      |                             ^
exercises.c:46:29: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:47:8: error: expected expression before ‘int’
   47 |        int* data = (int*) malloc(sizeof(int));
      |        ^~~
exercises.c:46:4: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   46 |    for (int k = 1; k <= 10; i++)
      |    ^~~
exercises.c:48:8: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   48 |        *data = k;
      |        ^
exercises.c:48:9: error: ‘data’ undeclared (first use in this function)
   48 |        *data = k;
      |         ^~~~
exercises.c:48:16: error: ‘k’ undeclared (first use in this function)
   48 |        *data = k;
      |                ^
cc1: all warnings being treated as errors
33efe24
Fri Mar 20 05:58:33 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:8: error: expected expression before ‘int’
   47 |        int* data = (int*) malloc(sizeof(int));
      |        ^~~
exercises.c:46:4: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   46 |    for (int k = 1; k <= 10; k++)
      |    ^~~
exercises.c:48:8: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   48 |        *data = k;
      |        ^
exercises.c:48:9: error: ‘data’ undeclared (first use in this function)
   48 |        *data = k;
      |         ^~~~
exercises.c:48:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:48:16: error: ‘k’ undeclared (first use in this function)
   48 |        *data = k;
      |                ^
cc1: all warnings being treated as errors
d63b66f
Fri Mar 20 06:18:21 PM UTC 2026: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:8: error: expected expression before ‘int’
   47 |        int* data = (int*) malloc(sizeof(int));
      |        ^~~
exercises.c:46:4: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   46 |    for (int k = 1; k <= 10; k++)
      |    ^~~
exercises.c:48:8: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   48 |        *data = k;
      |        ^
exercises.c:48:9: error: ‘data’ undeclared (first use in this function)
   48 |        *data = k;
      |         ^~~~
exercises.c:48:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:48:16: error: ‘k’ undeclared (first use in this function)
   48 |        *data = k;
      |                ^
cc1: all warnings being treated as errors
34db244
Fri Mar 20 06:19:01 PM UTC 2026: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  1|4
total_score: 10/70
c44ab78
Sun Mar 22 08:05:55 PM UTC 2026: 
 exercises.c | 27 +++++++++++++++++++++++++--
 1 file changed, 25 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:59:4: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   59 |    while (dato != NULL)
      |    ^~~~~
exercises.c:61:8: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   61 |        dato = next(L);
      |        ^~~~
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:121:15: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
  121 |            if (cadena[i] == ')')
      |               ^
cc1: all warnings being treated as errors
5f085b3
Sun Mar 22 08:07:59 PM UTC 2026: 
 exercises.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:117:11: error: unused variable ‘pila’ [-Werror=unused-variable]
  117 |    Stack* pila = create_stack();
      |           ^~~~
cc1: all warnings being treated as errors
8e3d42b
Sun Mar 22 08:08:19 PM UTC 2026: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|3
total_score: 30/70
80ba27d
Sun Mar 22 08:10:21 PM UTC 2026: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
f4a1cf2
Sun Mar 22 08:12:24 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
979b57e
Sun Mar 22 11:23:33 PM UTC 2026: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:124:16: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
  124 |             if (cadena[i] == ')')
      |                ^
cc1: all warnings being treated as errors
9e998f4
Mon Mar 23 12:37:48 AM UTC 2026: 
 exercises.c | 23 ++++++++---------------
 1 file changed, 8 insertions(+), 15 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:120:14: error: expected identifier or ‘(’ before ‘=’ token
  120 |     for (int = 0; cadena[i] != '\0'; i++){
      |              ^
exercises.c:120:26: error: ‘i’ undeclared (first use in this function)
  120 |     for (int = 0; cadena[i] != '\0'; i++){
      |                          ^
exercises.c:120:26: note: each undeclared identifier is reported only once for each function it appears in
0523116
Mon Mar 23 12:38:09 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
aa3acf9
Mon Mar 23 12:41:38 AM UTC 2026: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 60/70
4d5a5d2
Mon Mar 23 12:42:40 AM UTC 2026: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
ca92d15
Mon Mar 23 01:03:11 AM UTC 2026: 
 exercises.c | 26 +++++++++++++++-----------
 1 file changed, 15 insertions(+), 11 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:124:16: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
  124 |             if (cadena[i] == ')')
      |                ^
cc1: all warnings being treated as errors
6d1e430
Mon Mar 23 01:03:53 AM UTC 2026: 
 exercises.c | 30 +++++++++++++++---------------
 1 file changed, 15 insertions(+), 15 deletions(-)
 tests:  7|1
total_score: 60/70
7efec33
